--- a/Laboratory/Storyboards/Base.lproj/Main.storyboard
+++ b/Laboratory/Storyboards/Base.lproj/Main.storyboard
@@ -339,7 +339,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZBh-ax-Bds" customClass="EquipmentInfoView" customModule="Laboratory" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZBh-ax-Bds">
                                 <rect key="frame" x="0.0" y="88" width="375" height="641"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -354,7 +354,7 @@
                         <viewLayoutGuide key="safeArea" id="Zxb-0j-AIi"/>
                     </view>
                     <connections>
-                        <outlet property="mainView" destination="ZBh-ax-Bds" id="2oJ-jI-aDd"/>
+                        <outlet property="mainView" destination="ZBh-ax-Bds" id="eVr-5I-VIf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mq0-5F-6qY" userLabel="First Responder" sceneMemberID="firstResponder"/>
